# mimosi

./: Cargo.toml  README.md  example.maze  example.mouse  index.html  mouse.toml  test.rhai
.github/workflows/: ci.yml  pages.yml
crates/mazeparser/: Cargo.toml  README.md
crates/mazeparser/src/: lib.rs
src/: args.rs  camera.rs  engine.rs  helper.rs  main.rs  maze.rs  micromouse.rs  mouse.rs  physics.rs  ray.rs  simulation.rs
src/micromouse/: mouse.rs  sensor.rs
src/physics/: floor.rs  walls.rs
test_data/: example.maze  mouse.toml  test.rhai
