[package]
name = "mimosi"
version = "0.4.0"
edition = "2021"
description = "A small micromouse simulator!"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/mimosi"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
notan = { version = "0.12.1", features = ["egui"] }
rhai = { version = "1.19.0", features = ["f32_float"]}
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
anyhow = "1.0.86"
stringlit = "2.1.0"
